<resources>
    <string name="app_name">Meals Planner</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="default_web_client_id">44946027055-d8orpneihlgeq1bl7jh708udvg8fb0v7.apps.googleusercontent.com</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login_to_continue_planning_meals">Login to continue planning meals</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="or_continue_with">or continue with</string>
    <string name="forget_password">Forget Password?</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="continue_as_a_guest">Continue as a guest</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create_account">Create Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="and">and</string>
    <string name="i_agree_to_the">I agree to the</string>
    <string name="full_name">Full Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="start_your_meal_planning_journey">Start your meal planning journey</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="send_reset_link">Send Reset Link</string>
    <string name="contact_support">Contact Support</string>
    <string name="need_help">Need help?</string>
    <string name="back_to_login">Back to Login</string>
    <string name="email_address">Email Address</string>
    <string name="no_worries_enter_your_email_address_and_we_ll_send_you_instructions_to_reset_your_password">No worries! Enter your email address and we\'ll send you instructions to reset your password.</string>
    <string name="plan_your_delicious_journey">Plan your delicious journey</string>
    <string name="we_ve_sent_password_reset_instructions_to">We\'ve sent password reset instructions to:</string>
    <string name="check_your_email">Check Your Email</string>
    <string name="resend_email">Resend Email</string>
    <string name="loggin_loading">Logging in...</string>
    <string name="creating_account_loading">Creating account...</string>
    <string name="resetting_password_loading">Resetting password...</string>
    <string name="profile">Profile</string>
    <string name="planner">Planner</string>
    <string name="favorites">Favorites</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="meal_of_the_day">We Recommend for you</string>
    <string name="view_recipe">View recipe</string>
    <string name="categories">Categories</string>
    <string name="see_all">See All</string>
    <string name="search_meals">Search Meals</string>
    <string name="apply_filters">Apply Filters</string>
    <string name="search_for_meals">Search for meals...</string>
    <string name="filter_settings">Filter Settings</string>
    <string name="country">Country</string>
    <string name="category">Category</string>
    <string name="you_saved_recipes">You saved recipes</string>
    <string name="access_your_favorites_anytime">Access your favorites anytime</string>
    <string name="offline_friendly">Offline Friendly</string>
    <string name="discover_meals">Discover Meals</string>
    <string name="no_favorites_yet">No favorites yet</string>
    <string name="start_adding_meals_to_your_favorites_to_access_them_quickly">Start adding meals to your favorites to access them quickly</string>
    <string name="weekly_planner">Weekly Planner</string>
    <string name="plan_your_meals_ahead">Plan your meals ahead</string>
    <string name="add_meal">Add Meal</string>
    <string name="cooking_steps">Cooking Steps</string>
    <string name="cooking_video">Cooking Video</string>
    <string name="ingredients">Ingredients</string>
    <string name="preferences">Preferences</string>
    <string name="theme">Theme</string>
    <string name="light_mode">Light Mode</string>
    <string name="other">Other</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="explore_cuisines">Explore Cuisines</string>
    <string name="add_to_planner">Add to Planner</string>
    <string name="notifications">Notifications</string>
    <string name="logout">Logout</string>
</resources>