<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#edfcf7"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="32dp">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            app:cardCornerRadius="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00bd7e"
                android:padding="32dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_logo"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/create_account"
            android:textColor="@color/text_primary"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_your_meal_planning_journey"
            android:textColor="@color/text_secondary"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:elevation="4dp"
            app:cardCornerRadius="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDescription">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="16dp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="3dp">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:textColor="@color/text_primary"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/edUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/bg_rounded_ed"
                    android:drawableStart="@drawable/ic_person"
                    android:drawablePadding="8dp"
                    android:hint="@string/full_name"
                    android:inputType="textEmailAddress"
                    android:padding="16dp"
                    android:textColor="@color/text_primary"
                    android:textColorHint="@color/text_secondary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView2" />

                <EditText
                    android:id="@+id/edEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/bg_rounded_ed"
                    android:drawableStart="@drawable/ic_mail"
                    android:drawablePadding="8dp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="16dp"
                    android:textColor="@color/text_primary"
                    android:textColorHint="@color/text_secondary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edUserName" />

                <EditText
                    android:id="@+id/edPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/bg_rounded_ed"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawablePadding="8dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="16dp"
                    android:textColor="@color/text_primary"
                    android:textColorHint="@color/text_secondary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edEmail" />

                <EditText
                    android:id="@+id/edConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/bg_rounded_ed"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawablePadding="8dp"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:padding="16dp"
                    android:textColor="@color/text_primary"
                    android:textColorHint="@color/text_secondary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edPassword" />

                <CheckBox
                    android:id="@+id/checkBox"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="16dp"
                    android:padding="0dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edConfirmPassword" />

                <TextView

                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/i_agree_to_the"
                    android:textColor="@color/text_primary"
                    app:layout_constraintBottom_toTopOf="@+id/tvPrivacyPolicy"
                    app:layout_constraintStart_toEndOf="@+id/checkBox"
                    app:layout_constraintTop_toTopOf="@+id/checkBox"
                    app:layout_constraintVertical_chainStyle="packed" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/terms_amp_conditions"
                    android:textColor="@color/text_special"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/textView3"
                    app:layout_constraintTop_toTopOf="@+id/textView3" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/and"
                    android:textColor="@color/text_primary"
                    app:layout_constraintStart_toEndOf="@id/textView4"
                    app:layout_constraintTop_toTopOf="@+id/textView3" />

                <TextView
                    android:id="@+id/tvPrivacyPolicy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/privacy_policy"
                    android:textColor="@color/text_special"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/checkBox"
                    app:layout_constraintStart_toEndOf="@id/checkBox"
                    app:layout_constraintTop_toBottomOf="@+id/textView3" />


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnCreateAccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/bg_rounded_but"
                    android:padding="16dp"
                    android:text="@string/create_account"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/checkBox" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/or_continue_with"
                    android:textColor="@color/text_primary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btnCreateAccount" />

                <View
                    android:id="@+id/view"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginEnd="8dp"
                    android:background="@color/divider"
                    app:layout_constraintBottom_toBottomOf="@+id/textView6"
                    app:layout_constraintEnd_toStartOf="@+id/textView6"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView6" />

                <View
                    android:id="@+id/view2"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginStart="8dp"
                    android:background="@color/divider"
                    app:layout_constraintBottom_toBottomOf="@+id/textView6"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView6"
                    app:layout_constraintTop_toTopOf="@+id/textView6" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/butGoogle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/bg_buttons_auth"
                    android:drawableStart="@drawable/ic_google"
                    android:elevation="0dp"
                    android:lines="1"
                    android:maxLines="1"
                    android:paddingHorizontal="24dp"
                    android:text="@string/google"
                    android:textAllCaps="false"
                    android:textColor="@color/text_primary"
                    app:layout_constraintEnd_toStartOf="@+id/butFacebook"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/butFacebook" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/butFacebook"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/bg_buttons_auth"
                    android:drawableStart="@drawable/ic_facebook"
                    android:drawablePadding="4dp"
                    android:elevation="0dp"
                    android:lines="1"
                    android:maxLines="1"
                    android:paddingHorizontal="24dp"
                    android:text="@string/facebook"
                    android:textAllCaps="false"
                    android:textColor="@color/text_primary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/butGoogle"
                    app:layout_constraintTop_toBottomOf="@+id/textView6" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/butGuest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/bg_guest_but"
                    android:text="@string/continue_as_a_guest"
                    android:textAllCaps="false"
                    android:textColor="@color/text_special"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/butGoogle" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/don_t_have_an_account"
                    android:textColor="@color/text_secondary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/butGuest" />

                <TextView
                    android:id="@+id/tvLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="16dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/login"
                    android:textColor="@color/text_special"
                    app:layout_constraintStart_toEndOf="@+id/textView7"
                    app:layout_constraintTop_toBottomOf="@+id/butGuest" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>