<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#edfcf7">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            app:cardCornerRadius="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00bd7e"
                android:padding="32dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_logo"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/welcome_back"
            android:textColor="@color/text_primary"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_to_continue_planning_meals"
            android:textColor="@color/text_secondary"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

        <androidx.cardview.widget.CardView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:elevation="4dp"
            app:cardCornerRadius="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDescription">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="16dp">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textColor="@color/text_primary"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/edEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/bg_rounded_ed"
                    android:drawableStart="@drawable/ic_mail"
                    android:drawablePadding="8dp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="16dp"
                    android:textColor="@color/text_primary"
                    android:textColorHint="@color/text_secondary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView2" />

                <EditText
                    android:id="@+id/edPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/bg_rounded_ed"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawablePadding="8dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="16dp"
                    android:textColor="@color/text_primary"
                    android:textColorHint="@color/text_secondary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edEmail" />

                <TextView
                    android:id="@+id/tvForgetPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/forget_password"
                    android:textColor="@color/text_special"
                    app:layout_constraintEnd_toEndOf="@+id/edPassword"
                    app:layout_constraintTop_toBottomOf="@+id/edPassword" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/butLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/bg_rounded_but"
                    android:padding="16dp"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvForgetPassword" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/or_continue_with"
                    android:textColor="@color/text_primary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/butLogin" />

                <View
                    android:id="@+id/view"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginEnd="8dp"
                    android:background="@color/divider"
                    app:layout_constraintBottom_toBottomOf="@+id/textView6"
                    app:layout_constraintEnd_toStartOf="@+id/textView6"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView6" />

                <View
                    android:id="@+id/view2"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginStart="8dp"
                    android:background="@color/divider"
                    app:layout_constraintBottom_toBottomOf="@+id/textView6"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView6"
                    app:layout_constraintTop_toTopOf="@+id/textView6" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/butGoogle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/bg_buttons_auth"
                    android:drawableStart="@drawable/ic_google"
                    android:elevation="0dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:paddingHorizontal="32dp"
                    android:text="@string/google"
                    android:textAllCaps="false"
                    android:textColor="@color/text_primary"
                    app:layout_constraintEnd_toStartOf="@+id/butFacebook"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/butFacebook" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/butFacebook"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/bg_buttons_auth"
                    android:drawableStart="@drawable/ic_facebook"
                    android:drawablePadding="8dp"
                    android:elevation="0dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:paddingHorizontal="30dp"
                    android:singleLine="true"
                    android:text="@string/facebook"
                    android:textAllCaps="false"
                    android:textColor="@color/text_primary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/butGoogle"
                    app:layout_constraintTop_toBottomOf="@+id/textView6" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/butGuest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/bg_guest_but"
                    android:text="@string/continue_as_a_guest"
                    android:textAllCaps="false"
                    android:textColor="@color/text_special"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/butGoogle" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/don_t_have_an_account"
                    android:textColor="@color/text_primary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/butGuest" />

                <TextView
                    android:id="@+id/tvSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/sign_up"
                    android:textColor="@color/text_special"
                    app:layout_constraintStart_toEndOf="@+id/textView7"
                    app:layout_constraintTop_toBottomOf="@+id/butGuest" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>